--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 
 </li>
 
- <form action="index.js" method="POST">
+ <!-- <form action="index.js" method="POST">
 	<select class="selectCl" name="option">
 <option>Tamil</option>
 <option>English</option>
 Hello</select>
 <button type="submit">submit</button>
-</form> 
+</form>  -->
 
 </body>
 </html>
